snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha1
9c73b0ad4838eb0a33acfa01dfe879b1ea23e1da